Cree las paginas correspondientes a cada seccion del menu

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
     <header>
-
+        <h1>Grano Libre</h1>
+        <h2>Donde el placer y la seguridad van de la mano. Cocina libre de gluten, hecha con amor.</h2>
     </header>
 
     <main>
+      <h1>Menú Digital - Libre de Gluten</h1>
+
+    <nav>
+        <ul>
+        <li><a href="platos.html">Platos principales</a></li>
+        <li><a href="postres.html">Postres</a></li>
+        <li><a href="bebidas.html">Bebidas</a></li>
+        </ul>
+    </nav>
 
     </main>
 
