Termine de definir platos, comienzo con el css

--- a/bebidas.html
+++ b/bebidas.html
@@ -10,13 +10,13 @@
 
   <div class="plato">
     <h2>Gaseosa</h2>
-    <p>Bebida gaseosa refrescante y sin gluten.</p>
+    <p>Linea Coca Cola 1,5L.</p>
     <p>Precio: $2.000</p>
   </div>
 
   <div class="plato">
-    <h2>Limonada con menta y jengibre</h2>
-    <p>Refrescante limonada casera con hojas de menta y toque de jengibre. Sin azúcar agregada. Sin TACC.</p>
+    <h2>Limonadas</h2>
+    <p>Refrescante limonada casera de menta y jengibre, maracuja o frutos rojos.</p>
     <p>Precio: $2.200</p>
   </div>
 
