--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
     </header>
 
     <main>
-      <h1>Menú Digital - Libre de Gluten</h1>
+        <h1>Menú Digital - Libre de Gluten</h1>
 
-    <nav>
-        <ul>
-        <li><a href="platos.html">Platos principales</a></li>
-        <li><a href="postres.html">Postres</a></li>
-        <li><a href="bebidas.html">Bebidas</a></li>
-        </ul>
-    </nav>
-
+        <nav>
+            <ul>
+            <li><a href="platos.html">Platos principales</a></li>
+            <li><a href="postres.html">Postres</a></li>
+            <li><a href="bebidas.html">Bebidas</a></li>
+            </ul>
+        </nav>
     </main>
 
     <footer>
-
+        <p>Seguinos en nuestras redes @Grano_Libre o comunicate al 456789</p>
+        <p>&copy 2025 Mi Web. Todos los derechos reservados.</p>
     </footer>
+
 </body>
 </html>
