--- a/platos.html
+++ b/platos.html
@@ -10,13 +10,13 @@
 
   <div class="plato">
     <h2>Ojo de bife con papas rústicas</h2>
-    <p>Corte de carne premium, cocido a la plancha con sal marina, acompañado de papas rústicas al horno y chimichurri casero sin TACC.</p>
+    <p>Corte de carne premium, cocido a la plancha con sal marina, acompañado de papas rústicas al horno y chimichurri casero.</p>
     <p>Precio: $6.800</p>
   </div>
 
   <div class="plato">
     <h2>Fideos de arroz con vegetales</h2>
-    <p>Fideos de arroz salteados con brócoli, zanahoria y champiñones en salsa tamari sin gluten. Opción vegana.</p>
+    <p>Fideos de arroz salteados con brócoli, zanahoria y champiñones en salsa tamari. Opción vegana.</p>
     <p>Precio: $5.500</p>
   </div>
 
