--- a/postres.html
+++ b/postres.html
@@ -10,13 +10,13 @@
 
   <div class="plato">
     <h2>Brownie de harina de almendras</h2>
-    <p>Brownie húmedo elaborado con harina de almendras y cacao amargo, sin trazas de gluten. Acompañado con crema de coco.</p>
+    <p>Brownie húmedo elaborado con harina de almendras y cacao amargo. Acompañado con crema de coco.</p>
     <p>Precio: $3.800</p>
   </div>
 
   <div class="plato">
     <h2>Flan de coco con caramelo de naranja</h2>
-    <p>Flan suave de leche de coco, sin harina ni gluten, con caramelo artesanal infusionado con cáscara de naranja.</p>
+    <p>Flan suave de leche de coco con caramelo artesanal infusionado con cáscara de naranja.</p>
     <p>Precio: $3.500</p>
   </div>
 
