Estilo a la pagina

--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Digital</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
     <header>
         <h1>Grano Libre</h1>
-        <h2>Donde el placer y la seguridad van de la mano. Cocina libre de gluten, hecha con amor.</h2>
+        <h3>Donde el placer y la seguridad van de la mano. Cocina libre de gluten, hecha con amor.</h3>
+
     </header>
 
     <main>
-        <h1>Menú Digital - Libre de Gluten</h1>
-
+        <h1>Menú</h1>
+        <hr>   
+        <p>Seleccione la opción deseada. Todos nuestros platos son libre de gluten.</p>
         <nav>
             <ul>
             <li><a href="platos.html">Platos principales</a></li>
