--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 </head>
 <body>
     <header>
-        <h1>Grano Libre</h1>
+        <div class="logo-titulo">
+            <img src="img/gluten-free.png" alt="Logo sin TACC" class="logo">
+            <h1 class="titulo">Grano Libre</h1>
+        </div>
+
+
         <h3>Donde el placer y la seguridad van de la mano. Cocina libre de gluten, hecha con amor.</h3>
 
     </header>
@@ -26,9 +31,9 @@
         <p>Seleccione la opción deseada. Todos nuestros platos son libre de gluten.</p>
         <nav>
             <ul>
-            <li><a href="platos.html">Platos principales</a></li>
-            <li><a href="postres.html">Postres</a></li>
-            <li><a href="bebidas.html">Bebidas</a></li>
+                <li><b>-<a href="platos.html">Platos principales</a></b></li>
+                <li><b>-<a href="postres.html">Postres</a></b></li>
+                <li><b>-<a href="bebidas.html">Bebidas</a></b></li>
             </ul>
         </nav>
     </main>
