Enlace todas las paginas al css

--- a/bebidas.html
+++ b/bebidas.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Bebidas - Menú Digital</title>
-
-    
-
-
+    <meta charset="UTF-8" />
+    <title>Bebidas - Menú Digital</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <h1>Bebidas</h1>
   <a href="index.html">← Volver al menú principal</a>
