--- a/postres.html
+++ b/postres.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Postres - Menú Digital</title>
+    <meta charset="UTF-8" />
+    <title>Postres - Menú Digital</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Postres</h1>
