--- a/platos.html
+++ b/platos.html
@@ -4,29 +4,41 @@
     <meta charset="UTF-8" />
     <title>Platos principales - Menú Digital</title>
     <link rel="stylesheet" href="css/style.css">
+
+     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Platos principales</h1>
-    <a href="index.html">← Volver al menú principal</a>
+    <header class="paginas">
+        <h1 class="titulo_paginas">Platos principales</h1>
+        <a href="index.html"  class="vuelta">← Volver al menú principal</a> 
+    </header>
+    
+    <main>
+        <div class="plato">
+            <h2>Ojo de bife con papas rústicas</h2>
+            <img src="img/ojo_bije.jpg" alt="Ojo de bife">
+            <p>Corte de carne premium, cocido a la plancha con sal marina, acompañado de papas rústicas al horno y chimichurri casero.</p>
+            <p>Precio: $6.800</p>
+        </div>
 
-    <div class="plato">
-        <h2>Ojo de bife con papas rústicas</h2>
-        <p>Corte de carne premium, cocido a la plancha con sal marina, acompañado de papas rústicas al horno y chimichurri casero.</p>
-        <p>Precio: $6.800</p>
-    </div>
+        <div class="plato">
+            <h2>Fideos de arroz con vegetales</h2>
+            <img src="img/fideos.jpg" alt="fideos">
+            <p>Fideos de arroz salteados con brócoli, zanahoria y champiñones en salsa tamari. Opción vegana.</p>
+            <p>Precio: $5.500</p>
+        </div>
 
-    <div class="plato">
-        <h2>Fideos de arroz con vegetales</h2>
-        <p>Fideos de arroz salteados con brócoli, zanahoria y champiñones en salsa tamari. Opción vegana.</p>
-        <p>Precio: $5.500</p>
-    </div>
+        <div class="plato">
+            <h2>Ensalada Mediterránea</h2>
+            <img src="img/ensalada.jpg" alt="ensalada">
+            <p>Mezcla fresca de rúcula, espinaca baby, tomates cherry, aceitunas negras y queso feta, con aderezo de aceite de oliva extra virgen.</p>
+            <p>Precio: $4.800</p>
+        </div>
+    </main>
 
-    <div class="plato">
-        <h2>Ensalada Mediterránea</h2>
-        <p>Mezcla fresca de rúcula, espinaca baby, tomates cherry, aceitunas negras y queso feta, con aderezo de aceite de oliva extra virgen.</p>
-        <p>Precio: $4.800</p>
-    </div>
 
 </body>
 </html>
