Copie el estilo en todas las paginas

--- a/bebidas.html
+++ b/bebidas.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8" />
     <title>Bebidas - Menú Digital</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Bebidas</h1>
-  <a href="index.html">← Volver al menú principal</a>
+    <header class="paginas">
+        <h1 class="titulo_paginas">Bebidas</h1>
+        <a href="index.html" class="vuelta">← Volver al menú principal</a>
+    </header>
+  
+    <main>
+        <div class="plato">
+            <h2>Gaseosa</h2>
+            <div class="fila_plato">
+                <div class="info_plato">
+                    <p>Linea Coca Cola 1,5L.</p>
+                    <p>Precio: $2.000</p>
+                </div>
+            </div>
+        </div>
 
-  <div class="plato">
-    <h2>Gaseosa</h2>
-    <p>Linea Coca Cola 1,5L.</p>
-    <p>Precio: $2.000</p>
-  </div>
-
-  <div class="plato">
-    <h2>Limonadas</h2>
-    <p>Refrescante limonada casera de menta y jengibre, maracuja o frutos rojos.</p>
-    <p>Precio: $2.200</p>
-  </div>
-
+        <div class="plato">
+            <h2>Limonadas</h2>
+            <div class="fila_plato">
+                <img src="img/limonada.jpg" alt="Limonada" class="img_plato">
+                <div class="info_plato">
+                    <p>Refrescante limonada casera de menta y jengibre, maracuja o frutos rojos.</p>
+                    <p>Precio: $2.200</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
