--- a/postres.html
+++ b/postres.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8" />
     <title>Postres - Menú Digital</title>
     <link rel="stylesheet" href="css/style.css">
+    
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Postres</h1>
-  <a href="index.html">← Volver al menú principal</a>
+    <header class="paginas">
+        <h1 class="titulo_paginas">Postres</h1>
+        <a href="index.html" class="vuelta">← Volver al menú principal</a>
+    </header>
 
-  <div class="plato">
-    <h2>Brownie de harina de almendras</h2>
-    <p>Brownie húmedo elaborado con harina de almendras y cacao amargo. Acompañado con crema de coco.</p>
-    <p>Precio: $3.800</p>
-  </div>
+    <main>
+        <div class="plato">
+            <h2>Brownie de harina de almendras</h2>
+            <div class="fila_plato">
+                <img src="img/brownie.jpg" alt="Brownie" class="img_plato">
+                <div class="info_plato">
+                    <p>Brownie húmedo elaborado con harina de almendras y cacao amargo. Acompañado con crema de coco.</p>
+                    <p>Precio: $3.800</p>
+                </div>
+            </div>
+        </div>
 
-  <div class="plato">
-    <h2>Flan de coco con caramelo de naranja</h2>
-    <p>Flan suave de leche de coco con caramelo artesanal infusionado con cáscara de naranja.</p>
-    <p>Precio: $3.500</p>
-  </div>
-
+        <div class="plato">
+            <h2>Flan de coco con caramelo de naranja</h2>
+            <div class="fila_plato">
+                <img src="img/flan.jpg" alt="Flan" class="img_plato">
+                <div class="info_plato">
+                    <p>Flan suave de leche de coco con caramelo artesanal infusionado con cáscara de naranja.</p>
+                    <p>Precio: $3.500</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
