--- a/bebidas.html
+++ b/bebidas.html
@@ -20,9 +20,10 @@
         <div class="plato">
             <h2>Gaseosa</h2>
             <div class="fila_plato">
+                <img src="img/coca.jpg" alt="Coca cola" class="img_plato">
                 <div class="info_plato">
                     <p>Linea Coca Cola 1,5L.</p>
-                    <p>Precio: $2.000</p>
+                    <p class="precio"><b>Precio: $2.000</b></p>
                 </div>
             </div>
         </div>
@@ -33,7 +34,7 @@
                 <img src="img/limonada.jpg" alt="Limonada" class="img_plato">
                 <div class="info_plato">
                     <p>Refrescante limonada casera de menta y jengibre, maracuja o frutos rojos.</p>
-                    <p>Precio: $2.200</p>
+                    <p class="precio"><b>Precio: $2.200</b></p>
                 </div>
             </div>
         </div>
