--- a/postres.html
+++ b/postres.html
@@ -23,7 +23,7 @@
                 <img src="img/brownie.jpg" alt="Brownie" class="img_plato">
                 <div class="info_plato">
                     <p>Brownie húmedo elaborado con harina de almendras y cacao amargo. Acompañado con crema de coco.</p>
-                    <p>Precio: $3.800</p>
+                    <p class="precio"><b>Precio: $3.800</b></p>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                 <img src="img/flan.jpg" alt="Flan" class="img_plato">
                 <div class="info_plato">
                     <p>Flan suave de leche de coco con caramelo artesanal infusionado con cáscara de naranja.</p>
-                    <p>Precio: $3.500</p>
+                    <p class="precio"><b>Precio: $3.500</b></p>
                 </div>
             </div>
         </div>
