--- a/bebidas.html
+++ b/bebidas.html
@@ -18,11 +18,11 @@
   
     <main>
         <div class="plato">
-            <h2>Gaseosa</h2>
+            <h2>Gaseosas</h2>
             <div class="fila_plato">
                 <img src="img/coca.jpg" alt="Coca cola" class="img_plato">
                 <div class="info_plato">
-                    <p>Linea Coca Cola 1,5L.</p>
+                    <p>Línea Coca Cola 1,5L.</p>
                     <p class="precio"><b>Precio: $2.000</b></p>
                 </div>
             </div>
