--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Digital</title>
+    <title>Menú Digital</title>
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
@@ -17,10 +17,7 @@
             <img src="img/gluten-free.png" alt="Logo sin TACC" class="logo">
             <h1 class="titulo">Grano Libre</h1>
         </div>
-
-
         <h3>Donde el placer y la seguridad van de la mano. Cocina libre de gluten, hecha con amor.</h3>
-
     </header>
 
     <main>
@@ -35,9 +32,8 @@
             </ul>
         </nav>
     </main>
-
     <footer>
-        <p>Seguinos en nuestras redes @Grano_Libre o comunicate al 456789</p>
+        <p>Seguinos en nuestras redes @Grano_Libre o comunícate al 456789</p>
         <p>&copy 2025 Mi Web. Todos los derechos reservados.</p>
     </footer>
 
