--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
         </nav>
     </main>
     <footer>
-        <p>Seguinos en nuestras redes @Grano_Libre o comunícate al 456789</p>
-        <p>&copy 2025 Mi Web. Todos los derechos reservados.</p>
+        <p>Seguinos en nuestras redes @Grano_Libre o comunícate al 
+            <a href="tel:456789">456789</a>
+        </p>
+        <p>&copy; 2025 Mi Web. Todos los derechos reservados.</p>
     </footer>
+
 
 </body>
 </html>
