Modifique disposicion de la pagina principal

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <p>Seleccione la opción deseada. Todos nuestros platos son libre de gluten.</p>
         <nav>
             <ul>
-                <li><b>-<a href="platos.html">Platos principales</a></b></li>
-                <li><b>-<a href="postres.html">Postres</a></b></li>
-                <li><b>-<a href="bebidas.html">Bebidas</a></b></li>
+                <li><b><a href="platos.html">Platos principales</a></b></li>
+                <li><b><a href="postres.html">Postres</a></b></li>
+                <li><b><a href="bebidas.html">Bebidas</a></b></li>
             </ul>
         </nav>
     </main>
